tests/errors/test_wrong_argument_count.mob
// Test wrong number of arguments error
print("Testing wrong argument count...");
func add(a, b) {
    return a + b;
}

var sum = add(1, 2, 3);  // Too many arguments
print("This should not print");
